register with referrer